kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-portfolio

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-portfolio

  template:
    metadata:
      labels:
        app: devops-portfolio

    spec:
      containers:
        - name: devops-portfolio
          image: 686827376739.dkr.ecr.us-east-1.amazonaws.com/devops-portfolio:v1
          ports:
            - containerPort: 80
